# Tex2Doc

./: .env copy.mygit  .env.mygit  .env.mygit.example  .gitattributes  .gitignore  .rustfmt.toml  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  _fix_line.txt  clippy.toml  comprehensive_run1.txt  comprehensive_run2.txt  comprehensive_run3.txt  deny.toml  package-lock.json  package.json  probe_gateway.py  rust-toolchain.toml  simulate_mygit_ai.py  standards.lock.json  test_url.rs  test_zip.rs  tests_run1.txt  verify_claude_max.py  verify_deepseek.py  verify_mygit_deepseek.py
.cursor/: mcp.json
.githooks/: post-commit
.tools/: build_out.txt  convert_out.txt  doc_out.txt  verify_out.txt
apps/rust-service/: .env.example  Cargo.toml  README.md  tests_run1.txt
apps/rust-service/src/: automation_service.rs  db_store.rs  error.rs  error_code.rs  excel_export.rs  feedback_service.rs  file_storage.rs  lib.rs  limits.rs  logging.rs  main.rs  routes.rs  state.rs  worker_service.rs
apps/rust-service/tests/: api.rs  comprehensive.rs
apps/slint-user/: Cargo.toml  README.md  build.rs
apps/slint-user/src/: cloud_account.rs  cloud_convert.rs  commands.rs  credential_store.rs  desktop_dialog.rs  desktop_update.rs  i18n.rs  job.rs  job_history.rs  main.rs  report.rs  settings.rs  test_convert.rs  theme.rs  updater.rs
apps/slint-user/src/ui/: i18n-strings.slint  main.slint  mod.rs  types.slint
apps/slint-user/src/ui/components/: quality-components.slint  quality-result-dialog.slint  status-badge.slint
apps/slint-user/src/ui/pages/: account.slint  convert.slint  history.slint  quality-report.slint  settings.slint
apps/slint-user/src/ui_bindings/: account.rs  billing.rs  conversion.rs  diagnostics.rs  feedback.rs  helpers.rs  history.rs  mod.rs  settings.rs
crates/cli/: Cargo.toml
crates/cli/src/: ast_dump.rs  cmd.rs  docx2pdf.rs  docx_diff.rs  main.rs  pdf_verify.rs  render_dump.rs  semantic_cmd.rs  tex_compile.rs
crates/commercial-api-client/: Cargo.toml
crates/commercial-api-client/src/: auth.rs  billing.rs  client.rs  conversions.rs  feedback.rs  lib.rs  models.rs  releases.rs  uploads.rs  usage.rs
crates/compatibility-analyzer/: Cargo.toml
crates/compatibility-analyzer/src/: lib.rs
crates/compiler-engine/: Cargo.toml
crates/compiler-engine/examples/: paper3_to_docx.rs
crates/compiler-engine/profiles/: chinese-academic-toml.toml  chinese-academic.json  chinese-academic.toml  cvpr.toml  generic-article-toml.toml  generic-article.json  generic.toml  jos-paper-toml.toml  jos-paper.json  medical-journal.json  nature.toml  springer.toml  tacl.toml
crates/compiler-engine/src/: journal_detector.rs  lib.rs  profiles.rs
crates/core/: Cargo.toml
crates/core/src/: convert.rs  error.rs  lib.rs  options.rs  result.rs
crates/core/tests/: end_to_end.rs  ieee_fixtures.rs  paper3_e2e.rs  paper3_oracle_compare.rs  paper3_zip_e2e.rs  zip_bomb_protection.rs
crates/desktop-slint/: Cargo.toml  build.rs
crates/desktop-slint/src/: app_state.rs  cloud_account.rs  cloud_convert.rs  commands.rs  diagnostics.rs  i18n.rs  job.rs  job_history.rs  local_convert.rs  main.rs  report.rs  settings.rs  theme.rs  updater.rs
crates/desktop-slint/src/ui/: main.slint  motion.slint  tokens.slint  types.slint
crates/desktop-slint/src/ui/components/: alert-banner.slint  empty-state.slint  metric-card.slint
crates/desktop-slint/src/ui/pages/: account.slint  billing.slint  convert.slint  history.slint  settings.slint
crates/desktop-slint/src/ui_bindings/: billing.rs  conversion.rs  diagnostics.rs  helpers.rs  update.rs
crates/docx-pdf/: Cargo.toml
crates/docx-pdf/src/: backend.rs  error.rs  lib.rs  libreoffice.rs  meta.rs  profile.rs  timeout.rs
crates/docx-writer/: Cargo.toml
crates/docx-writer/src/: lib.rs  model.rs  packer.rs  page_setup.rs  profile.rs  serializer.rs  styles.rs  template.rs  validate.rs
crates/latex-reader/: Cargo.toml
crates/latex-reader/src/: algorithm.rs  expand.rs  green.rs  include.rs  latex_to_text.rs  lexer.rs  lib.rs  lower.rs  normalize.rs  parser.rs
crates/latex-reader/tests/: dump_paper3.rs  insta_snapshots.rs  paper3_abstract.rs  paper3_algorithm.rs  paper3_front_matter.rs  proptest.rs
crates/latex-reader/tests/snapshots/: insta_snapshots__list_doc.snap  insta_snapshots__simple_doc.snap  insta_snapshots__simple_doc.snap.new  insta_snapshots__table_doc.snap
crates/mathml/: Cargo.toml
crates/mathml/src/: expr.rs  latex.rs  lib.rs  mathml.rs  omml.rs
crates/native/: Cargo.toml
crates/native/src/: lib.rs
crates/quality/: Cargo.toml
crates/quality/src/: context.rs  docx_diff.rs  error.rs  layer.rs  lib.rs  markers.rs  normalize.rs  quality_run.rs  report.rs  structural.rs  structural_pdf.rs  textual.rs  thresholds.rs  visual.rs  word_check.rs
crates/rule-engine/: Cargo.toml
crates/rule-engine/src/: ai_inference.rs  audit.rs  builtin_rules.rs  capability.rs  lib.rs  registry.rs  rule_engine.rs  rule_output.rs  rule_output_routing.rs
crates/semantic-ast/: Cargo.toml
crates/semantic-ast/src/: docx_render.rs  lib.rs  mapping_loader.rs  span.rs  standard.rs  visit.rs
crates/semantic-collector/: Cargo.toml
crates/semantic-collector/src/: lib.rs  reference_graph.rs  tex_utils.rs
crates/server/: Cargo.toml
crates/server/src/: db_store.rs  error.rs  excel_export.rs  feedback_service.rs  file_storage.rs  lib.rs  limits.rs  main.rs  routes.rs  state.rs  worker_service.rs
crates/server/tests/: api.rs
crates/tex-facade/: Cargo.toml
crates/tex-facade/src/: backend.rs  cache.rs  error.rs  extract.rs  facade.rs  latexmk.rs  lib.rs  rasterize.rs  tectonic.rs  xelatex.rs
crates/tex-facade/tests/: backend.rs  cache_key.rs  compile.rs  extract.rs
crates/utils/: Cargo.toml
crates/utils/src/: error.rs  fontdetect.rs  fontmap.rs  image.rs  lib.rs  path.rs  vfs.rs
crates/utils/tests/: proptest.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
crates/xdv-parser/: Cargo.toml
crates/xdv-parser/src/: error.rs  layout_graph.rs  lib.rs  model.rs  opcode.rs  parser.rs  reader.rs
crates/xdv-parser/tests/: fixtures.rs
(+1033 files in other folders)
