[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/utils",
    "crates/semantic-ast",
    "crates/latex-reader",
    "crates/docx-writer",
    "crates/bib",
    "crates/mathml",
]
exclude = [
    "crates/wasm",
    "crates/server",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "MIT OR Apache-2.0"
repository = "https://example.com/doc-engine"
authors = ["Doc-engine Contributors"]
publish = false

[workspace.dependencies]
# 内部 crate
doc-utils        = { path = "crates/utils" }
doc-semantic-ast = { path = "crates/semantic-ast" }
doc-latex-reader = { path = "crates/latex-reader" }
doc-docx-writer  = { path = "crates/docx-writer" }
doc-bib          = { path = "crates/bib" }
doc-mathml       = { path = "crates/mathml" }

# 错误 / 序列化
thiserror = "1.0"
anyhow    = "1.0"
serde     = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 文本处理
logos = "0.14"
rowan = "0.15"

# XML / 压缩
quick-xml = { version = "0.36", features = ["serialize"] }
zip       = { version = "2.2", default-features = false, features = ["deflate"] }

# 图片
image    = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# CLI / 异步（暂未在 M1-M2 使用，保留锁版本）
clap     = { version = "4.5", features = ["derive"] }
tokio    = { version = "1.40", features = ["macros", "rt-multi-thread"] }

# 测试 / 基准
insta      = { version = "1.40", features = ["yaml", "ron"] }
proptest   = "1.4"
criterion  = { version = "0.5", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto       = "thin"
codegen-units = 1
strip     = "symbols"

[profile.dev]
opt-level = 0
debug     = true
incremental = true
