[package]
name        = "doc-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish     = false
description = "Doc-engine Axum HTTP server: in-memory zip → docx via doc-core convert"

[lib]
name = "doc_server"
path = "src/lib.rs"

[[bin]]
name = "doc-server"
path = "src/main.rs"

[dependencies]
doc-core = { path = "../../crates/core" }
doc-compiler-engine = { path = "../../crates/compiler-engine" }
doc-quality = { path = "../../crates/quality" }

axum         = { version = "0.7", features = ["multipart", "macros"] }
tower        = "0.5"
tower-http   = { version = "0.6", features = ["cors", "fs", "limit", "trace"] }
tokio        = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tokio-util   = { version = "0.7", features = ["io"] }
memchr       = "2"
http         = "1.1"
bytes        = "1.7"
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time"] }
tracing-appender = "0.2"
mime         = "0.3"
async-trait  = "0.1"
zip          = { workspace = true }
rand         = "0.8"
sha2         = "0.10"
chrono       = { workspace = true }
sqlx         = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
uuid         = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["multipart", "rustls-tls", "json"] }
