[package]
name = "doc-commercial-api-client"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
thiserror = "2"
url = "2"

[dev-dependencies]
tokio-test = "0.4"
