[package]
name = "doc-compiler-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Semantic TeX compiler engine for high-fidelity TeX to DOCX conversion"

[dependencies]
doc-utils               = { workspace = true }
doc-semantic-ast        = { workspace = true }
doc-latex-reader        = { workspace = true }
doc-docx-writer         = { workspace = true }
doc-mathml              = { workspace = true }
doc-semantic-collector  = { workspace = true }
doc-compatibility-analyzer = { workspace = true }
doc-rule-engine         = { workspace = true }
doc-xdv-parser         = { workspace = true }

thiserror = { workspace = true }
serde     = { workspace = true }
serde_json = { workspace = true }
tempfile  = "3"
zip       = { workspace = true }
image     = { workspace = true }
pdfium-render = { workspace = true }
tracing   = { workspace = true }
