[package]
name = "doc-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Doc-engine 统一 FFI/WASM 门面"

[dependencies]
doc-utils        = { workspace = true }
doc-semantic-ast = { workspace = true }
doc-latex-reader = { workspace = true }
doc-docx-writer  = { workspace = true }
doc-bib          = { workspace = true }

thiserror = { workspace = true }
serde     = { workspace = true }
serde_json = { workspace = true }
zip       = { workspace = true }
image     = { workspace = true }
# pdfium-render 依赖 mio，mio 不支持 wasm32 目标；
# 在 wasm 下完全跳过 pdfium（render_pdf_to_png 直接返回 None）。
pdfium-render = { workspace = true, optional = true }
tracing   = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pdfium-render = { workspace = true }

[features]
default = []
pdf = ["dep:pdfium-render"]  # 在 wasm 下不会启用，CLI/native 默认开
