[package]
name = "doc-desktop-slint"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
slint = "1"
doc-core = { path = "../core" }
doc-compiler-engine = { path = "../compiler-engine" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"
tokio = { version = "1", features = ["rt", "sync"] }
log = "0.4"
env_logger = "0.11"
thiserror = "2"

[build-dependencies]
slint-build = "1"
