[package]
name        = "doc-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish     = false
description = "Doc-engine Axum HTTP server: in-memory zip → docx via doc-core convert"

[lib]
name = "doc_server"
path = "src/lib.rs"

[[bin]]
name = "doc-server"
path = "src/main.rs"

[dependencies]
doc-core = { path = "../core" }
doc-compiler-engine = { path = "../compiler-engine" }

axum         = { version = "0.7", features = ["multipart", "macros"] }
tower        = "0.5"
tower-http   = { version = "0.6", features = ["limit", "trace"] }
tokio        = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tokio-util   = { version = "0.7", features = ["io"] }
memchr       = "2"
http         = "1.1"
bytes        = "1.7"
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mime         = "0.3"
async-trait  = "0.1"
zip          = { workspace = true }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["multipart", "rustls-tls", "json"] }
