[package]
name        = "doc-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish     = false
description = "Doc-engine WASM bridge: in-memory zip → docx via doc-core convert"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
doc-core = { path = "../core" }

wasm-bindgen = { version = "0.2", features = ["std"] }
serde        = { workspace = true }
serde-wasm-bindgen = "0.6"
serde_json   = { workspace = true }
thiserror    = { workspace = true }
js-sys       = "0.3"
zip          = { workspace = true, default-features = false, features = ["deflate"] }
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = []
console_error_panic_hook = ["dep:console_error_panic_hook"]
