[package]
name        = "doc-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish     = false
description = "Doc-engine WASM bridge: in-memory zip → docx via doc-core convert"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
doc-core = { path = "../core" }

wasm-bindgen = { version = "0.2", features = ["std"] }
serde        = { workspace = true }
serde-wasm-bindgen = "0.6"
serde_json   = { workspace = true }
thiserror    = { workspace = true }
js-sys       = "0.3"
zip          = { workspace = true, default-features = false, features = ["deflate"] }
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = []
console_error_panic_hook = ["dep:console_error_panic_hook"]

# wasm-opt 默认会校验 bulk-memory 特性，但 zip / image 等 crate 已经生成
# 使用 memory.copy 的指令；关闭 wasm-opt 跳过校验可显著减少构建时长
# 并避免 wasm-opt 与 rustc 输出之间的版本冲突。
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
